# scrapesh

./: .gitignore  Cargo.toml  readme.md  shggzy.json  shggzy_bid_info.json
data/: remove_duplicates.py
doc/: readme.md
log/: 2025-08-14 21:31:17.txt
src/: lib.rs  main.rs  web_driver.rs
src/scrape/: mod.rs  shggzy.rs
test_async/: Cargo.toml
test_async/src/: main.rs
