[package]
name = "hypochlorite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
reqwest = "0.11.22"
serde = "1.0.197"
thirtyfour = "0.31.0"
colored = "2.1.0"
libc = "0.2.153"
rand = "0.8.5"
csv = "1.3.0"
lazy_static = "1.4.0"
