[package]
name = "test_async"
version = "0.1.0"
edition = "2021"

[dependencies]
hypochlorite = { path ="../"}
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
reqwest = "0.11.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thirtyfour = "0.31.0"
colored = "2.1.0"
libc = "0.2.153"
rand = "0.8.5"
csv = "1.3.0"
lazy_static = "1.4.0"
unicode-segmentation = "1.12.0"
log = "0.4.27"
simplelog = "0.12.2"

